--- a/styles_index.css
+++ b/styles_index.css
@@ -8,6 +8,19 @@
     font-size: 30px;
 }
 
+/* дочірній селектор */
+.inner-menu > li{
+    font-style: italic;
+    font-family: serif;
+    font-size: 36px;
+}
+
+/* контекстний селектор зі звіту */
+.footer h2{
+    color: rgb(82, 55, 30);
+    font-style: italic;
+}
+
 .inner-menu a {
     color: rgb(29, 17, 6);
     text-decoration: none;
