--- a/styles_index.css
+++ b/styles_index.css
@@ -1,5 +1,6 @@
 .main-menu li:first-child{
     font-size: 40px;
+    color: rgb(192, 179, 179);
 } 
 
 .inner-menu li {
@@ -8,17 +9,10 @@
     font-size: 30px;
 }
 
-/* дочірній селектор */
 .inner-menu > li{
     font-style: italic;
     font-family: serif;
     font-size: 36px;
-}
-
-/* контекстний селектор зі звіту */
-.footer h2{
-    color: rgb(82, 55, 30);
-    font-style: italic;
 }
 
 .inner-menu a {
@@ -40,30 +34,119 @@
     border-spacing: 10px;
 }
 
-#car-table a{
+/* СТИЛІ ПОСИЛАНЬ */
+a:link{
+    color:rgb(0, 0, 0);
+}
+
+#car-table a:link{
     color:rgb(129, 84, 43);
+}
+
+a:hover{
+    color:rgb(167, 59, 10);
+    font-size: 38px;
+    font-style: italic;
+}
+
+#car-table a:hover{
+    color:rgb(167, 59, 10);
+    font-size: 30px;
+    font-style: italic;
+}
+
+a:active{
+    color:rgb(19, 173, 27);
+    font-weight: bold;
+}
+
+#car-table a:active{
+    color:rgb(19, 173, 27);
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a:visited{
+    color:rgb(51, 25, 199);
 }
 
 #car-table th, .content td {
     padding: 10px;
-    font-size: 30px;
+    font-size: 26px;
     text-align: center;
     border: 2px solid rgb(219, 213, 213);
 }
 
+/* ВИЗНАЧЕННЯ ВИСОТИ ТА ШИРИНА ДЛЯ DIV */
+.upper-center{
+    height: 45vh;
+    width: 100%;
+
+    background-image:url(https://static.vecteezy.com/ti/fotos-gratis/t1/40911488-ai-gerado-uma-linha-do-luxo-carros-dentro-varios-cores-e-exibido-dentro-uma-showroom-com-foco-em-uma-vermelho-veiculos-frente-lado-e-roda-foto.jpeg); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+}
+
+/* AFTER БЕЗ content (затемнення) */
+.upper-center::after {
+    content: ""; 
+    background-color:  rgba(29, 17, 6, 0.70); 
+    position: absolute; 
+    
+    left: 0;
+    width: 100%;
+    height: 45vh;
+    z-index: 0; 
+}
+
+/* POSITION */
+iframe {
+    border: none;
+    width:80%;
+    height: 65vh; 
+    position: relative;
+    left: 10%;
+    top: 20px;
+}
+
+/* AFTER */
+#автосалони::after{
+content: "Тут ви можете переглянути автосалони України:";
+font-size: 24px;
+color: black;
+font-weight: lighter;
+font-style: normal;
+}
+
+/* BEFORE */
+#inner-menu::before{
+    content: "Зміст";
+    color: rgb(29, 17, 6);
+    font-size: 36px;
+    font-weight: bold;
+    display: block;
+    margin: 10px 0 10px 0;
+    unicode-bidi: isolate;
+}
+
+.upper-center h1 {
+    position: relative;
+    z-index: 1;
+    color: rgb(192, 179, 179);
+    padding-left: 5%;
+    font-size: 72px;
+    font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 0;
+}
 .content table th {
     background-color: rgb(48, 32, 17);
     color: rgb(192, 179, 179);
     font-weight: bold;
     text-align: center;
-}
-
-iframe {
-    border: none;
-    margin-left: 20px;
-    width:80%;
-    height: 65vh; 
-    border:0;   
 }
 
 .car-image {
@@ -123,4 +206,16 @@ h2{
 
 .content ul li{
     margin-left: 30px;
+}
+
+.autosalons h2{
+    color: rgb(82, 55, 30);
+    font-style: italic;
+    text-align: center;
+}
+
+.autosalons{
+    padding: 10px;
+    padding-bottom: 30px;
+    margin: 10px;
 }
