--- a/styles_sedan.css
+++ b/styles_sedan.css
@@ -52,6 +52,13 @@ h1{
     align-items: center;
 }
 
+
+.block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .bottom{
     display: flex;
     flex-direction: row;
